# cookbook

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
app/: main.py
app/db/: database.py  models.py
app/schemas/: magic_link.py  recipe.py  settings.py  user.py
app/services/: magic_link_service.py  smtp_client.py
app/views/: confirm_sign_in.html  magic_link_sent.html  sign_in.html  welcome.html
